--- a/index.html
+++ b/index.html
@@ -404,6 +404,65 @@
             animation: fadeIn 0.5s ease-out forwards;
         }
 
+        /* Стили для флагов */
+        .flag-container {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+            margin-bottom: 15px;
+        }
+
+        .flag {
+            width: 24px;
+            height: 16px;
+            display: inline-block;
+            border-radius: 2px;
+            overflow: hidden;
+            box-shadow: 0 0 2px rgba(0,0,0,0.3);
+        }
+
+        .flag-by {
+            position: relative;
+            width: 24px;
+            height: 16px;
+            background: linear-gradient(to bottom,
+            #C8312E 50%,
+            #3CB54A 50%);
+            border-radius: 2px;
+            box-shadow: 0 0 2px rgba(0,0,0,0.3);
+            overflow: hidden;
+        }
+
+        .flag-by::before {
+            content: '';
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 3px;
+            height: 100%;
+            background-color: white;
+        }
+
+        .flag-ru {
+            background: linear-gradient(to bottom,
+            #FFFFFF 33%,
+            #0039A6 33% 66%,
+            #D52B1E 66%);
+        }
+
+        .bank-name {
+            font-size: 0.9rem;
+            color: var(--accent);
+            margin-bottom: 15px;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+        }
+
+        .bank-name i {
+            font-size: 1.2rem;
+        }
+
         @media (max-width: 768px) {
             body {
                 padding-top: 100px;
@@ -577,7 +636,13 @@
 
         <div class="cards-container">
             <div class="bank-card">
-                <h3>Для жителей РБ</h3>
+                <div class="flag-container">
+                    <h3>Для жителей РБ</h3>
+                    <div class="flag flag-by" title="Флаг Беларуси"></div>
+                </div>
+                <div class="bank-name">
+                    <i class="fas fa-university"></i> Берарусбанк
+                </div>
                 <div class="copy-field">
                     <label>Номер карты</label>
                     <div class="copy-content">
@@ -609,7 +674,13 @@
             </div>
 
             <div class="bank-card">
-                <h3>Для жителей РФ</h3>
+                <div class="flag-container">
+                    <h3>Для жителей РФ</h3>
+                    <div class="flag flag-ru" title="Флаг России"></div>
+                </div>
+                <div class="bank-name">
+                    <i class="fas fa-university"></i> Берарусбанк МИР
+                </div>
                 <div class="copy-field">
                     <label>Номер карты</label>
                     <div class="copy-content">
