--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             line-height: 1.6;
             color: var(--dark-text);
             background-color: var(--dark-bg);
-            padding-top: 80px;
+            /*padding-top: 80px;*/
         }
 
         p {
@@ -36,19 +36,6 @@
             margin-bottom: 7px;
             text-align: justify
         }
-
-        /*header {*/
-        /*  height: var(--header-height);*/
-        /*  position: fixed;*/
-        /*  top: 0;*/
-        /*  left: 0;*/
-        /*  width: 100%;*/
-        /*  padding: 1rem;*/
-        /*  background-color: var(--darker-bg);*/
-        /*  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.5);*/
-        /*  z-index: 1001;*/
-        /*  isolation: isolate;*/
-        /*}*/
 
         .header {
             height: var(--header-height);
@@ -129,6 +116,7 @@
             max-width: 1200px;
             margin: 0 auto;
             padding: 2rem;
+            padding-top: var(--header-height);
         }
 
         section {
@@ -138,7 +126,8 @@
             background-color: var(--darker-bg);
             box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
             animation: fadeIn 0.5s ease-out forwards;
-            scroll-margin-top: 80px;
+            /*scroll-margin-top: calc(var(--header-height) + 20px);*/
+            scroll-margin-top: 200px;
         }
 
         h1, h2, h3 {
@@ -798,13 +787,18 @@
             e.preventDefault();
             const targetId = this.getAttribute('href');
             const targetElement = document.querySelector(targetId);
-            const headerHeight = document.querySelector('header').offsetHeight;
-            const targetPosition = targetElement.getBoundingClientRect().top + window.pageYOffset - headerHeight;
+            if (targetElement) {
+                const headerHeight = document.querySelector('.header').offsetHeight;
+                const targetPosition = targetElement.offsetTop - headerHeight;
 
-            window.scrollTo({
-                top: targetPosition,
-                behavior: 'smooth'
-            });
+                window.scrollTo({
+                    top: targetPosition,
+                    behavior: 'smooth'
+                });
+
+                // Обновляем URL без перезагрузки страницы
+                history.pushState(null, null, targetId);
+            }
         });
     });
 
