fixed header padding

--- a/index.html
+++ b/index.html
@@ -457,6 +457,10 @@
                 padding-top: 100px;
             }
 
+            main {
+                padding-top: 40px;
+            }
+
             .header-container {
                 flex-wrap: wrap;
             }
