fixed about block and phone number

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         }
 
         .text-collapse.expanded {
-            max-height: 2000px;
+            max-height: none;
         }
 
         .text-collapse.expanded::after {
@@ -538,7 +538,7 @@
         <div class="header-container">
             <div class="header-contacts">
                 <a href="#" id="phone-link">
-                    <i class="fas fa-phone"></i> +375 (29) 123-45-67
+                    <i class="fas fa-phone"></i> +375 (44) 777-83-23
                 </a>
                 <a href="https://instagram.com/liska_kat" target="_blank">
                     <i class="fab fa-instagram"></i> @liska_kat
@@ -630,7 +630,7 @@
         <div class="cards-container">
             <div class="bank-card">
                 <div class="flag-container">
-                    <h3>Для жителей РБ</h3>
+                    <h3>Основная карта</h3>
                     <div class="flag flag-by" title="Флаг Беларуси"></div>
                 </div>
                 <div class="bank-name">
@@ -710,7 +710,7 @@
         <h2>Контакты</h2>
         <div class="contacts-container">
             <a href="#" id="footer-phone-link">
-                <i class="fas fa-phone"></i> +375 (29) 123-45-67
+                <i class="fas fa-phone"></i> +375 (44) 777-83-23
             </a>
             <a href="https://instagram.com/liska_kat" target="_blank">
                 <i class="fab fa-instagram"></i> @liska_kat
