fixed about block animation

--- a/index.html
+++ b/index.html
@@ -190,7 +190,7 @@
         }
 
         .text-collapse.expanded {
-            max-height: none;
+            max-height: 10000px;
         }
 
         .text-collapse.expanded::after {
