--- a/index.html
+++ b/index.html
@@ -565,7 +565,7 @@
 
 <main>
     <section id="about" class="visible">
-        <img src="https://scontent-waw2-2.cdninstagram.com/v/t39.30808-6/468092030_18004352738702033_8056943312355871148_n.jpg?stp=dst-jpg_e35_tt6&efg=eyJ2ZW5jb2RlX3RhZyI6IkNBUk9VU0VMX0lURU0uaW1hZ2VfdXJsZ2VuLjE0NDB4MTgwMC5zZHIuZjMwODA4LmRlZmF1bHRfaW1hZ2UifQ&_nc_ht=scontent-waw2-2.cdninstagram.com&_nc_cat=105&_nc_oc=Q6cZ2QEahzdKp2mtwxseI_7OyA6ocIiM07TwgKsRs7xsnZQsAA1L-d3dcW2A6f3DAGwqJ5I&_nc_ohc=0OtF6jCdd8wQ7kNvwEuJHG1&_nc_gid=fSUtNfLUqP6z1R1HUDisXg&edm=APs17CUAAAAA&ccb=7-5&ig_cache_key=MzE2ODQyMzMyMjA2NDUxNTc0NA%3D%3D.3-ccb7-5&oh=00_AfKkHQwUuBgXqsV7-7zenzkfSQcKK9__x7SSWqNDzXjadA&oe=6840089E&_nc_sid=10d13b" alt="Основатель Liska Kat">
+        <img src="LiskaKat.jpg" alt="Основатель Liska Kat">
         <div class="text-content">
             <h1>Кто я</h1>
             <div class="text-collapse" id="aboutText">
